--- a/gestor_contraseñas.csproj
+++ b/gestor_contraseñas.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="MySql.Data" Version="9.0.0" />
   </ItemGroup>
+  <!-- Excluir archivos de pruebas ubicados bajo ./test del proyecto principal -->
+  <ItemGroup>
+    <Compile Remove="test/**/*.cs" />
+    <EmbeddedResource Remove="test/**/*.resx" />
+    <None Remove="test/**/*" />
+  </ItemGroup>
 </Project>
