ci: configura CRLF y autocrlf para runners Windows

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Git config (EOL)
         shell: pwsh
         run: |
-          git config --global core.autocrlf false
-          git config --global core.eol lf
+          git config --global core.autocrlf true
+          git config --global core.eol crlf
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
