--- a/gestor_contraseñas.csproj
+++ b/gestor_contraseñas.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="MySql.Data" Version="9.0.0" />
+    <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.0" />
   </ItemGroup>
   <!-- Excluir archivos de pruebas ubicados bajo ./test del proyecto principal -->
   <ItemGroup>
