--- a/gestor_contraseñas.csproj
+++ b/gestor_contraseñas.csproj
@@ -11,6 +11,13 @@
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="MySql.Data" Version="9.0.0" />
     <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.0" />
+    <PackageReference Include="Markdig" Version="0.34.0" />
+  </ItemGroup>
+  <!-- Copiar documentación de ayuda al directorio de salida -->
+  <ItemGroup>
+    <Content Include="docs\ayuda\**\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <!-- Excluir archivos de pruebas ubicados bajo ./test del proyecto principal -->
   <ItemGroup>
